# TTT-QWEN

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  DECISIONS.md  IMPLEMENTATION_PROGRESS.md  README.md  TODO.md  pyproject.toml
.github/: pull_request_template.md
configs/: model_state_ttt_8b.yaml  paths.example.yaml
configs/h200/: a2_qwen3vl8b_baselineclips_4epoch_4gpu.yaml  a2_qwen3vl8b_four_closures_acceptance_4gpu.yaml  (+11 more)
docs/: dataloader_throughput.md  optimization-baseline-v5.md  production-a2-a5.md
scripts/: benchmark_retrieval_history.py  build_visual_cost_index.py  prepare_a2_acceptance_manifest.py  prepare_svcbench_episodes.py  preprocess_cache.py  select_dataloader_profile.py  select_visual_batch_size.py  summarize_dataloader_trace.py  summarize_operator_diagnostics.py
tests/: test_a0_baseline.py  test_architecture_snapshot.py  test_baseline_a2_data.py  test_batch_tuning.py  test_dataloader_payloads.py  test_environment.py  test_episode_data.py  test_fast_ttt.py  test_functional_sgd.py  test_identity_bank.py  test_inference_protocol.py  test_input_composer.py  test_loader_tuning.py  test_losses.py  test_meta_trainer.py  test_model.py  test_observation_heads.py  test_operator_diagnostics_script.py  test_outer_gradient_control.py  test_outer_loss_balance.py  test_p0_baseline_contract.py  test_p13_tiny_integration.py  test_p14_gradient_audit.py  test_p15_artifacts.py  test_p15_tiny_integration.py  test_p2_synthetic_exit_artifacts.py  test_preprocess_cache.py  test_production_factory.py  test_query_encoder.py  test_query_tokens.py  test_qwen_adapter.py  test_runtime_metrics.py  test_runtime_unification.py  test_stage_a_composer.py  test_stage_a_metrics.py  test_stage_a_runtime.py  test_stage_a_targets.py  test_stage_a_trainer.py  test_stage_gate_artifacts.py  test_state_bank.py  (+11 more)
(+94 files in other folders)
