[project]
name = "ttt-svcbench-qwen"
version = "0.1.0"
description = "State-TTT extension of Qwen3-VL-8B for SVCBench."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.10,<2",
    "av>=14,<17",
    "einops>=0.8,<1",
    "huggingface-hub>=0.34,<1",
    "hydra-core>=1.3,<2",
    "jsonlines>=4,<5",
    "numpy>=2.1,<3",
    "opencv-python-headless>=4.10,<5",
    "pandas>=2.2,<4",
    "peft>=0.17,<1",
    "pillow>=11,<13",
    "psutil>=6,<8",
    "pydantic>=2.10,<3",
    "qwen-vl-utils>=0.0.14,<0.1",
    "safetensors>=0.5,<1",
    "scikit-learn>=1.6,<2",
    "scipy>=1.14,<2",
    "sentencepiece>=0.2,<1",
    "torch==2.9.0",
    "torchvision==0.24.0",
    "tqdm>=4.67,<5",
    "transformers==4.57.1",
]

[project.optional-dependencies]
tracking = [
    "tensorboard>=2.19,<3",
    "wandb>=0.21,<1",
]

[dependency-groups]
dev = [
    "mypy>=1.15,<2",
    "pre-commit>=4,<5",
    "pytest>=8.3,<10",
    "pytest-cov>=6,<8",
    "ruff>=0.11,<1",
    "types-pyyaml>=6.0,<7",
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ttt_svcbench_qwen"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
packages = ["ttt_svcbench_qwen"]
strict = true
follow_imports = "skip"
